views cloaked to avoid flickering during ajax loading

--- a/Presentation/mobSocial.WebApp/themes/admin/AdminLTE/css/overrides.css
+++ b/Presentation/mobSocial.WebApp/themes/admin/AdminLTE/css/overrides.css
@@ -106,3 +106,6 @@
     .url-preview .url-data .host-name {
       color: gray; }
 
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important; }
+
